# nof0

./: .gitmodules  DATA_SOURCE_COMPARISON.md  LOCAL_DEPLOY.md  OPTIMIZATION-SUMMARY.md  QUICKSTART.md  README.md  README_ME.md  VERIFY_DEPLOYMENT.md  verify.sh
go/: .env.example  .gitignore  Makefile  README.md  TESTING_SUMMARY.md  TEST_README.md  go.mod  go.sum  nof0.go  pyproject.toml
go/cmd/cron/: design.md  main.go
go/cmd/llm/: design.md  design2.md  main.go  market_ingestor.go
go/docs/: data-store.md  database-fixes-summary.md  database-issues-analysis.md  engine-data-store-todo.md  engine-data-store.md  engine.md  environment-config.md  principles.md  redesign-todo.md  redesign.md  types.md  verification.md
go/etc/: design.md  design2.md  design3.md  exchange.yaml  executor.yaml  llm.yaml  manager.yaml  market.yaml  nof0.yaml
go/internal/cache/: keys.go
go/internal/cli/: logging.go
go/internal/config/: config.go  config_env_test.go  config_integration_test.go  config_test.go  design.md  helpers.go  (+3 more)
go/migrations/: 000003_fix_timestamps.down.sql  000003_fix_timestamps.up.sql  000004_optimize_indexes.down.sql  000004_optimize_indexes.up.sql  001_domain.down.sql  001_domain.sql  001_domain.up.sql  002_refresh_helpers.down.sql  002_refresh_helpers.sql  002_refresh_helpers.up.sql  README.md
go/scripts/: check_hl_addr.go  run-integration-tests.sh  run-tests.sh  run_tests.py
go/test/: storage_integration_test.go  testify.md
server/: README.md  main.py  pyproject.toml
server/etc/: nof0.yaml
server/nof0/: __init__.py  app.py  config.py  data_loader.py  importer.py  service.py
server/tests/: test_data_loader.py
(+231 files in other folders)
