[project]
name = "nof0-tools"
version = "0.1.0"
description = "NOF0 API project with Python test utilities"
authors = []
dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "scripts/**/*",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[tool.uv.sources]
# Add any custom package sources here if needed

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF100", # unused noqa (RUF001) without code
]

[tool.black]
line-length = 88
target-version = ['py38']