[project]
name = "nof0-server"
version = "1.0.0"
description = "Python port of the NOF0 backend API server."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NOF0 Team" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "PyYAML>=6.0.1",
    "psycopg[binary]>=3.1.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
